name:                headphone-charging
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/headphone-charging#readme
license:             BSD3
license-file:        LICENSE
author:              Стив
maintainer:          kenethra.74@gmail.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     ChangeLog.md

executable headphone-charging
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      dbus
    , base >=4.7 && <5
    , criterion